src/components/exhibition-detail-page/exhibition-detail.scss
@import "./exhibition-tag/exhibition-tag.scss"; // TODO: remove/refactor

$bp-edp: 800px;

.edp-header {
	background: linear-gradient(180deg, $color-white 65.53%, #ececec 100%),
		$color-white;
	display: flex;
	flex-direction: column;
	padding-top: $spacing-m;
}

.edp-header__row {
	display: flex;
	justify-content: space-between;
	padding: 0 $spacing-component-margin;
	width: 100%;

	&:first-child {
		@media (orientation: landscape) {
			border-bottom: 1px solid $color-grey-500;
		}
	}
}

.edp-header__eyebrow {
	@include typography-tag();
	display: block;
	font-size: $textsize-xxs; //TODO add to tag maybe?
	margin: 0 $spacing-component-margin $spacing-xxs;

	&:empty {
		display: none;
		margin-bottom: 0;
	}
}

.edp-header__status_module {
	@media (orientation: landscape) {
		flex-shrink: 0;
		padding-left: $spacing-xs;
		width: 33%;
	}
}

.edp-header__location {
	font-weight: 500;
}

.edp-header__display-text {
	font-size: $textsize-xs;
}

.edp-header__row--top {
	@media (orientation: portrait) {
		flex-direction: column;
	}
}

.edp-badge {
	display: inline-flex;
}

.edp-header__row--bottom {
	display: flex;
	flex-direction: column-reverse;
	padding: 0;
	@media (orientation: landscape) {
		flex-direction: row;
		margin-bottom: $spacing-xxs;
		margin-top: $spacing-xxs;
		padding-left: $spacing-component-margin;
		padding-right: $spacing-component-margin;
	}
}

.edp-header__cta-container {
	align-items: center;
	border-bottom: 1px solid $color-grey-500;
	display: flex;
	flex-basis: auto;
	flex-grow: 1;
	justify-content: space-between;
	padding: $spacing-xxs $spacing-component-margin;
	@media (orientation: landscape) {
		border-bottom: 0;
		border-left: 1px solid $color-grey-500;
		flex-basis: 33%;
		flex-grow: 1;
		flex-shrink: 0;
		justify-content: space-around;
		padding: 0 0 0 $spacing-micro;
	}
}

.edp-header__cta {
	@media (orientation: landscape) {
		margin: 0 $spacing-micro;
	}
}

.edp-tabs__container {
	background-color: $color-white;
	border-bottom: 1px solid $color-grey-500;
	box-shadow: 6px 6px 10px 0 $color-card-shadow;
	flex-basis: 100%;
	flex-grow: 1;
	max-width: 100%;
	padding: $spacing-micro 0;
	position: relative;

	@media (orientation: landscape) {
		background-color: transparent;
		border-bottom: 0;
		box-shadow: none;
		padding: 0;
	}

	&:after,
	&:before {
		bottom: 0;
		content: "";
		position: absolute;
		top: 0;
		width: $spacing-component-margin;
		@media (orientation: landscape) {
			content: none;
		}
	}

	&:before {
		background: linear-gradient(270deg, $color-white-transparent 0%, $color-white 100%), transparent;
		left: 0;
	}

	&:after {
		background: linear-gradient(90deg, $color-white-transparent 0%, $color-white 100%), transparent;
		right: 0;
	}
}

.edp-tabs {
	display: block;
	max-width: 100%;
	overflow: auto;
	padding: 0 $spacing-component-margin;
	white-space: nowrap;
	@media (orientation: landscape) {
		padding: 0;
		white-space: normal;
	}
}

.edp-tabs__tab {
	border-bottom: 3px solid transparent;
	display: inline-block;
	font-weight: 500;
	margin: $spacing-micro $spacing-xxs $spacing-micro 0;
	text-decoration: none;
	white-space: nowrap;
	z-index: -1;

	&:last-child {
		margin-right: 0;
		@media (orientation: landscape) {
			margin-right: $spacing-micro;
		}
	}

	&.is-active {
		border-color: $color-black;
	}

	&:focus,
	&:hover {
		border-color: $color-focus-state;
		cursor: pointer;
		text-decoration: none;
	}

	&:focus:not(:hover):not(.is-active) {
		background-color: $color-focus-background;
	}
}

